--- a/nonempty-alternative.cabal
+++ b/nonempty-alternative.cabal
@@ -1,5 +1,5 @@
 name:                nonempty-alternative
-version:             0.2.0
+version:             0.3.0
 synopsis:            NonEmpty for Alternative types
 description:         Please see README.md
 homepage:            http://github.com/guaraqe/nonempty-alternative#readme
@@ -17,6 +17,7 @@ library
   exposed-modules:     Data.NonEmpty
   build-depends:       base >= 4.7 && < 5
                      , semigroups >= 0.18
+                     , comonad >= 4.2
   default-language:    Haskell2010
 
 source-repository head
